# nekro-plugin-webapp

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  README.md  __init__.py  handlers.py  models.py  plugin.py  prompt.md  pyproject.toml
static/: index.html
worker/: .gitignore  package.json  pnpm-lock.yaml  schema.sql  setup.js  tsconfig.json  wrangler.toml
worker/src/: auth.ts  index.ts  init.ts  storage.ts  types.ts
